css/styles.css
.navbar-item {
  padding-right: 40px !important;
  font-size: large !important;
}


.navbar-item:hover {
  background-color: white !important;
  color: black !important;
}

.navbar {
  border-bottom: 1px solid #dcdcdc
}



p,
title,
div {
  font-family: "IBM Plex Sans";
}

p {
  font-size: large;
}

#canvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

#main-section>.container {
  position: relative;
  z-index: 3;
}

.px-3-mobile {
  padding-left: 3rem;
  padding-right: 3rem;
}

@media screen and (min-width: 769px) {  /* This corresponds to Bulma's tablet breakpoint */
  .px-3-mobile {
    padding-left: 0;
    padding-right: 0;
  }
}

#main-section {
  position: relative;
  background-color: #1f1f2e !important;
  padding: 50px 0;
  margin-bottom: 50px;
  font-family: "Avenir";
  font-size: x-large;
  margin-top: 50px;
  color: white
}

.section {
  padding: 2rem
}

.footer-secondary {
  color: white;
  background-color: #1f1f2e;
}

.equal-height-card {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.equal-height-card {
  flex-grow: 1;
}

.card-content {
  padding-top: 0;
}

.card-img {
  padding: 20px; /* Adjust as needed */
}

.card:hover {
  transform: scale(1.02);
  border-top: 5px solid #9f1616;
}

.title {
  padding-bottom: 20px;
}

.is-white-text-title {
  color: white !important;
  text-transform: uppercase;
}

.is-256x256 {
  width: 256px !important;
  height: 256px !important;
}

.title.team-text {
  color: #f4f4f4;
}

.title {
  margin-bottom: 0;
}

.subtitle.team-text {
  color: #f4f4f4;
}

.img-with-border {
  border: 6px solid #000000;
  margin: 0;
}

.marines-img {
  margin-bottom: 20px;
}

#team-section {
  background-color: #1f1f2e !important;
  color: white;
  scroll-margin-top: 40px;
}

#applications-section, #technical-section {
  scroll-margin-top: 100px;
}


.footer-main {
  background-color: white !important;
  padding: 0 !important;
}

.footer-secondary {
  padding: 20px;
  margin-top: 20px;
}

.buttons {
  font-family: "IBM Plex Sans";
}

.button.is-black {
  background-color: black !important;
  color: white !important;
}

.button.is-red {
  background-color: #9f1616 !important;
  color: white !important;
  font-family: "IBM Plex Sans";
}

.button.is-red:hover {
  background-color: white !important;
  color: #fc5d35 !important;
}

.is-black-social {
  color: black !important;
}

.is-black-social:hover {
  background-color: white !important;
  color: #fc5d35 !important;
}

html {
  scroll-behavior: smooth;
}

body {
  scroll-behavior: smooth;
}

